# ffmpegimporter

./: .gitignore  build.gradle.kts  consumer-rules.pro  jitpack.yaml  settings.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/androidTest/java/com/example/ffmpegimporter/: ExampleInstrumentedTest.kt
src/main/cpp/: AudioProperties.h  CMakeLists.txt  FFMpegExtractor.cpp  FFMpegExtractor.h  jni_bridge.cpp
src/main/cpp/logging/: macros.h
src/main/java/com/example/ffmpegimporter/importer/: FFmpegLoader.kt  LgplPicker.kt  NativeBridgeImporter.kt  SoAuditHelper.kt
src/test/java/com/example/ffmpegimporter/: ExampleUnitTest.kt
